# dbt-duckdb-uv

./: .gitignore  README.md  dbt_project.yml  main.ipynb  pyproject.toml
models/marts/general/: _general__models.yml  dim_survived_city__daily.sql
models/source/: src_data_lake_raw.yml
models/staging/data_lake_raw/: stg_data_lake_raw__raw_titanic3.sql
