[project]
name = "dbt-duckdb-uv"
version = "0.1.0"
description = "dbt on duckdb with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
managed = true
preview = true
python-preference = "only-managed"
dev-dependencies = [
    "dbt-core>=1.8.7",
    "dbt-duckdb>=1.8.4",
    "duckdb>=1.1.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
]

[tool.uv.pip]
python = "3.12"
